--- a/terraform/templates/ecs-task-def.tmpl
+++ b/terraform/templates/ecs-task-def.tmpl
@@ -1,6 +1,6 @@
 [
     {
-        "environment": [],
+        "environment": ${environment_variables},
         "name": "${container_name}",
         "image": "${ecr_url}/${image_name}:${image_tag}",
         "cpu": ${cpu},
@@ -22,6 +22,7 @@
             }
         },
         "essential": true,
-        "volumesFrom": []
+        "volumesFrom": [],
+        "secrets": ${secrets}
     }
 ]
